v3/k8s/raw-manifest/dev/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* "\\.env$") {
        return 404;
      }
spec:
  tls:
    - hosts:
        - dev3.nemo.ai.kr
      secretName: dev-nemo-tls
  rules:
    - host: dev3.nemo.ai.kr
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-ui/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /v3/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-resources/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
